--- a/2D-gameEngine/2D-gameEngine.vcxproj.filters
+++ b/2D-gameEngine/2D-gameEngine.vcxproj.filters
@@ -18,6 +18,15 @@
     <Image Include="Assests\player.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Assests\dirt.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assests\grass.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assests\water.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Game.cpp">
@@ -49,5 +58,6 @@
     <None Include="SDL2.dll" />
     <None Include="SDL2_image.dll" />
     <None Include="zlib1.dll" />
+    <None Include="Assests\.gitignor" />
   </ItemGroup>
 </Project>
