--- a/2D-gameEngine/2D-gameEngine.vcxproj.filters
+++ b/2D-gameEngine/2D-gameEngine.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="Src\GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h">
@@ -50,6 +53,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
