--- a/2D-gameEngine/2D-gameEngine.vcxproj
+++ b/2D-gameEngine/2D-gameEngine.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="Src\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Components.h" />
+    <ClInclude Include="Src\ECS.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\GameObject.h" />
     <ClInclude Include="Src\Map.h" />
