--- a/2D-gameEngine/2D-gameEngine.vcxproj.filters
+++ b/2D-gameEngine/2D-gameEngine.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClInclude Include="Src\Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\ECS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Components.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="libpng16-16.dll" />
