--- a/2D-gameEngine/2D-gameEngine.vcxproj
+++ b/2D-gameEngine/2D-gameEngine.vcxproj
@@ -85,12 +85,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\corey\source\repos\Game\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\corey\Downloads\Dev\Dev\SDL2_image-2.0.1\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\corey\source\repos\Game\SDL2_ttf-devel-2.0.14-VC\SDL2_ttf-2.0.14\lib\x86;C:\Users\corey\Downloads\Dev\Dev\SDL2_image-2.0.1\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -141,51 +142,64 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Image Include="Assests\dirt.png" />
-    <Image Include="Assests\Enemy.png" />
-    <Image Include="Assests\grass.png" />
-    <Image Include="Assests\map.png" />
-    <Image Include="Assests\player.png" />
-    <Image Include="Assests\Terrain.png" />
-    <Image Include="Assests\Turtle_animations.png" />
-    <Image Include="Assests\Turtle_idle.png" />
-    <Image Include="Assests\Turtle.png" />
-    <Image Include="Assests\Turtle_walking.png" />
-    <Image Include="Assests\water.png" />
+    <Image Include="Assets\ColTex.png" />
+    <Image Include="Assets\dirt.png" />
+    <Image Include="Assets\Enemy.png" />
+    <Image Include="Assets\grass.png" />
+    <Image Include="Assets\map.png" />
+    <Image Include="Assets\player.png" />
+    <Image Include="Assets\Proj.png" />
+    <Image Include="Assets\Terrain.png" />
+    <Image Include="Assets\Turtle_animations.png" />
+    <Image Include="Assets\Turtle_idle.png" />
+    <Image Include="Assets\Turtle.png" />
+    <Image Include="Assets\Turtle_walking.png" />
+    <Image Include="Assets\water.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\AssetManager.cpp" />
     <ClCompile Include="Src\Collision.cpp" />
     <ClCompile Include="Src\ECS\ECS.cpp" />
     <ClCompile Include="Src\Game.cpp" />
-    <ClCompile Include="Src\GameObject.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\Map.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\AssetManager.h" />
     <ClInclude Include="Src\Collision.h" />
     <ClInclude Include="Src\ECS\Animation.h" />
     <ClInclude Include="Src\ECS\ColliderComponent.h" />
     <ClInclude Include="Src\ECS\Components.h" />
     <ClInclude Include="Src\ECS\ECS.h" />
     <ClInclude Include="Src\ECS\KeyboardControllerh.h" />
+    <ClInclude Include="Src\ECS\ProjectileComponent.h" />
     <ClInclude Include="Src\ECS\TileComponent.h" />
     <ClInclude Include="Src\ECS\TransformComponent.h" />
     <ClInclude Include="Src\ECS\SpriteComponenet.h" />
+    <ClInclude Include="Src\ECS\UILabel.h" />
     <ClInclude Include="Src\Game.h" />
-    <ClInclude Include="Src\GameObject.h" />
     <ClInclude Include="Src\Map.h" />
     <ClInclude Include="Src\TextureManager.h" />
     <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <None Include="Assests\16x16.map" />
+    <None Include="Assets\16x16.map" />
+    <None Include="libfreetype-6.dll" />
     <None Include="libpng16-16.dll" />
     <None Include="SDL2.dll" />
     <None Include="SDL2_image.dll" />
+    <None Include="SDL2_ttf.dll" />
     <None Include="zlib1.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Assets\collisionmap.txt" />
+    <Text Include="Assets\maptext.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Assets\arial.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
