--- a/2D-gameEngine/2D-gameEngine.vcxproj.filters
+++ b/2D-gameEngine/2D-gameEngine.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="Src\AssetManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\CombatManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h">
@@ -131,6 +134,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\ECS\UILabel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\CombatManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\ECS\StatsComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
